# gotParse

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  example.cpp
cmake/: Dependencies.cmake
examples/: CMakeLists.txt  basic_parse.cpp  got_hook_demo.cpp  runtime_check.cpp
include/elf_got/: elf_got.h
src/: main.cpp
src/core/: elf_parser.cpp  elf_parser.h  types.cpp  types.h
src/process/: maps_parser.cpp  maps_parser.h  process_reader.cpp  process_reader.h
src/symbol/: got_verifier.cpp  got_verifier.h  symbol_resolver.cpp  symbol_resolver.h
tests/: CMakeLists.txt  test_elf_parser.cpp  test_got_verifier.cpp  test_maps_parser.cpp  test_process_reader.cpp  test_readelf_verification.cpp  test_symbol_resolver.cpp  test_types.cpp
